--- a/src/components/mainNavBar/mainNavBar.css
+++ b/src/components/mainNavBar/mainNavBar.css
@@ -16,73 +16,92 @@
     color: var(--neutral-color-1);
 }
 
-.logo-link{
+.main-nav-bar .logo-link{
     height: 100%;
     display: flex;
     align-items: center;
 }
 
-.logo-link .logo-img{
+.main-nav-bar .logo-link .logo-img{
     width: 3rem;
     margin-right: 1.5rem;
 }
 
-.logo-link .logo-name{
+.main-nav-bar .logo-link .logo-name{
     font-size: 1.5rem;
     font-weight: bold;
 }
 
-.search-bar{
-    position: relative;
+.main-nav-bar .search-bar{
     width: 34.5vw;
-}
-
-.search-bar .search-bar-inpt{
-    width: 100%;
-    padding: .5rem;
+    
+    display: flex;
     border: 2px solid var(--neutral-color-1);
     border-radius: 7px;
+}
+
+.main-nav-bar .search-bar .search-bar-inpt{
+    width: 100%;
+    padding: .5rem;
+    border: none;
     background-color: transparent;
     outline: none;
 
     font-weight: 300;
     font-size: 1rem;
 }
-.search-bar .search-bar-inpt::placeholder{
+.main-nav-bar .search-bar .search-bar-inpt::placeholder{
     font-weight: 300;
     font-size: 1rem;
     color: var(--neutral-color-1)
 }
 
-.search-bar .search-btn{
-    position: absolute;
-
+.main-nav-bar .search-bar .search-label{
     background-color: transparent;
+
     border: none;
     outline: none;
 
-    right: 0;
-    top: 0;
-    padding: 0 1rem;
     height: 100%;
+    padding: .5rem 1rem;
 
     cursor: pointer;
+    font-size: 1rem;
+}
+.main-nav-bar .search-bar .search-label.hidden{
+    display: none;
 }
 
-.right-btns{
+.main-nav-bar .search-bar .search-request-btn{
+    background-color: transparent;
+
+    border: none;
+    outline: none;
+
+    height: 100%;
+    padding: .5rem 1rem;
+
+    cursor: pointer;
+    font-size: 1rem;
+}
+.main-nav-bar .search-bar .search-request-btn.hidden{
+    display: none;
+}
+
+.main-nav-bar .right-btns{
     display: flex;
     align-items: center;
 }
 
-.right-btns .login-btn{
+.main-nav-bar .right-btns .login-btn{
     font-weight: 500;
 }
 
-.menu{
+.main-nav-bar .menu{
     margin-left: 1.5rem;
 }
 
-.menu .menu-switch{
+.main-nav-bar .menu .menu-switch{
     border: none;
     border-radius: 50%;
     
@@ -100,9 +119,22 @@
     cursor: pointer;
 }
 
-.menu-switch .line-1, .menu-switch .line-2{
+.main-nav-bar .menu-switch .line-1, .menu-switch .line-2{
     width: 50%;
     height: 2px;
     border-radius: 1px;
     background-color: var(--neutral-color-1);
+}
+
+@media (max-width: 670px){
+    .main-nav-bar .logo-link .logo-img{
+        width: 2rem;
+        margin-right: .5rem;
+    }
+    .main-nav-bar .logo-link .logo-name{
+        font-size: 1.3rem;
+    }
+    .main-nav-bar .search-bar{
+        width: 40vw;
+    }
 }
