--- a/src/components/backdrop/backdrop.css
+++ b/src/components/backdrop/backdrop.css
@@ -14,7 +14,6 @@
 
     width: 100%;
     height: 10%;
-    z-index: 1;
 
     background-image: linear-gradient(to top, var(--neutral-color-2_8), transparent);
 }
@@ -25,5 +24,13 @@
 
     object-fit: cover;
 
-    filter: brightness(90%)
+    filter: brightness(90%);
+    position: relative;
+    z-index: -1;
+}
+
+@media (max-width: 595px){
+    .backdrop{
+        height: 50vh;
+    }
 }
